package org.freeradius;


message ValuePair { 
     required int32 attribute = 2;
     optional int32 vendor = 3;
     optional string string_value = 4;
     optional int32  int32_value = 5;
     optional sint32 sint32_value = 6;
     optional int64  int64_value = 7;
     optional bytes  bytes_value = 8;
};

enum ProcessingState {
    AUTHORIZE = 1;
    AUTHENTICATE = 2;
    PREACCOUNT = 3;
    ACCOUNT = 4;
    CHECKSIM = 5;
    POSTAUTH = 6;
};

message RequestData {
    required ProcessingState state = 20;
    repeated ValuePair vps = 21;
};

enum ValuePairOp {
    REPLACE = 1;
    ADD = 2;
    REMOVE = 3;
}

message ValuePairAction {
    required ValuePairOp op = 31;
    required ValuePair   vp = 32;
}

message RequestDataReply {
    optional bool allow = 40;
    optional string error_message = 41;
    repeated ValuePairAction actions = 42;
};


